prototype geospatial api
use minimized pe data

initial working prototype

--- a/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
+++ b/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
         <!-- "AR Required" app, requires "Google Play Services for AR" (ARCore)
              to be installed, as the app does not include any non-AR features. -->
         <meta-data android:name="com.google.ar.core" android:value="required" />
+        <meta-data
+            android:name="com.google.android.ar.API_KEY"
+            android:value="<Insert API Key>"/>
     </application>
 
 </manifest>
