try fix landscape issue with geospatial mode

--- a/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
+++ b/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+                android:screenOrientation="locked"
             android:exported="true"
             android:theme="@style/Theme.ArWorldScaleApp">
             <intent-filter>
@@ -59,7 +60,7 @@
         <meta-data android:name="com.google.ar.core" android:value="required" />
         <meta-data
             android:name="com.google.android.ar.API_KEY"
-            android:value="<Insert API Key>"/>
+            android:value="AIzaSyAywUB6fONMRJR0nZpBR0cQ5vPQwDZXpIw"/>
     </application>
 
 </manifest>
