WorldScaleSceneView: add geospatial api (#778)
* prototype geospatial api

use minimized pe data

initial working prototype

* add tracking mode

* apply elevation offset, format code

* prototype landscape mode

* dynamically apply rotation adjustment based on screen oreintation

* add camera controller doc

* doc

* add option to microapp to change mode

* working swapping proto

* cleanup changes for geospatial

* renames and refactor of constants

* fix logic to calculate display oriented pose in Geospatial mode

* simplify logic to update scene camera in Geospatial mode

* revert "simplify logic to update scene camera in Geospatial mode"

This reverts commit f249fc2a1ab63f19ce03a851fc2081e6164d2833.

* Fix geospatial mode crash and not displaying

* throw error if geospatial not supported

* clean up on session resume

* fix try/catch

* fix initialization status

* reformat

* rm api key

* newlines

* rm phantom nmea location provider

* rm unused constants

* rm unused cc factory funs

* comment out meta data tag in microapp manifest

* apiDump

* change manifest tag

* rename useGeospatial and rm scope param

* name changes and make poses for rotation constants

* refactor rememberWorldScaleCameraController to return the updated state

* name changes

* mv local pose calc before set origin camera

* address pr comments

* add clippping distance to geospatial

* add doc rememberWorldScaleCameraController

* add temp fix for sceneview objectalreadyowned error

---------

Co-authored-by: Gunther Heppner <gheppner@esri.com>

--- a/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
+++ b/microapps/ArWorldScaleApp/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
         <!-- "AR Required" app, requires "Google Play Services for AR" (ARCore)
              to be installed, as the app does not include any non-AR features. -->
         <meta-data android:name="com.google.ar.core" android:value="required" />
+        <!-- Insert your Google API key in order to use Geospatial tracking. -->
+        <meta-data
+            android:name="com.google.android.ar.API_KEY"
+            android:value="Insert Google API Key here"/>
     </application>
 
 </manifest>
