--- a/toolkit/legend/src/main/AndroidManifest.xml
+++ b/toolkit/legend/src/main/AndroidManifest.xml
@@ -18,5 +18,5 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
