Update gradle plugin and gradle version (#837)
* Update gradle plugin and gradle version

* Update gradle to the latest `8.14`

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 activityCompose = "1.10.1"
-androidGradlePlugin = "8.7.3"
+androidGradlePlugin = "8.9.2"
 androidXBrowser = "1.8.0"
 coilBOM = "2.5.0"
-composeBOM = "2025.04.00"
+composeBOM = "2025.04.01"
 androidxCamera = "1.4.2"
 androidxComposeCompiler = "1.5.12"
 androidxCore = "1.16.0"
@@ -36,6 +36,8 @@ truth = "1.4.4"
 uiautomator = "2.3.0"
 arcore = "1.48.0"
 playServicesLocation = "21.3.0"
+gmazzo = "2.4.4"
+gradleSecrets = "2.0.1"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose"}
@@ -104,10 +106,10 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-gradle-secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version = "2.0.1"}
+gradle-secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "gradleSecrets"}
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-gmazzo-test-aggregation = { id = "io.github.gmazzo.test.aggregation.results", version = "2.2.0" }
+gmazzo-test-aggregation = { id = "io.github.gmazzo.test.aggregation.results", version.ref = "gmazzo" }
 
 [bundles]
 camerax = [
