--- a/toolkit/offline/src/main/AndroidManifest.xml
+++ b/toolkit/offline/src/main/AndroidManifest.xml
@@ -20,24 +20,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application>
-        <!-- WorkManager foreground service with specified type -->
         <service
             android:name="androidx.work.impl.foreground.SystemForegroundService"
-            android:exported="false"
             android:foregroundServiceType="dataSync" />
-
-        <!-- BroadcastReceiver for notification actions -->
-        <receiver
-            android:name=".workmanager.NotificationActionReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="@string/cancel_notification" />
-            </intent-filter>
-        </receiver>
+        <receiver android:name=".workmanager.NotificationActionReceiver" />
     </application>
 
 </manifest>
