--- a/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
+++ b/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:allowBackup="true"
