Flyover prototype and basic app

--- a/microapps/ArFlyoverApp/ar-flyover-app/src/main/AndroidManifest.xml
+++ b/microapps/ArFlyoverApp/ar-flyover-app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Limits app visibility in the Google Play Store to ARCore supported devices
+         (https://developers.google.com/ar/devices). -->
+    <uses-feature android:name="android.hardware.camera.ar" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
