--- a/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
+++ b/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
-        android:name=".FeatureFormApplication"
+        android:name=".OfflineMapAreasApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
