geometry editor identify test and build

--- a/gradle.properties
+++ b/gradle.properties
@@ -49,7 +49,7 @@ artifactoryPassword=""
 # when building the toolkit locally, typically from Android Studio.
 # You will need to specify the build version in local.properties.
 # Example:
-# sdkBuildNumber=4446
+sdkBuildNumber=9999
 # When building the toolkit with CI, these versions are obtained from command line provided properties,
 # see sdkVersionNumber in settings.gradle.kts.
-sdkVersionNumber=200.7.0
+sdkVersionNumber=200.8.0
