--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ junit = "4.13.2"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 media3Exoplayer = "1.5.0"
-minSdk = "26"
+minSdk = "28"
 mlkitBarcodeScanning = "17.3.0"
 kotlinxCoroutinesTest = "1.8.0"
 kotlinxSerializationJson = "1.8.0"
@@ -36,8 +36,27 @@ truth = "1.4.4"
 uiautomator = "2.3.0"
 arcore = "1.47.0"
 playServicesLocation = "21.3.0"
+okhttpBom = "4.12.0"
+kotlinVersion="2.1.20"
+ktx="1.16.0"
+coroutinesAndroid="1.10.1"
+coroutines="1.10.1"
+jsonSerialization="1.8.0"
+lifecycle="2.8.7"
+securityCrypto="1.0.0"
 
 [libraries]
+okhttp = { module = "com.squareup.okhttp3:okhttp" }
+okhttp-bom = { group = "com.squareup.okhttp3", name = "okhttp-bom", version.ref = "okhttpBom" }
+okhttp-url-connection = { module = "com.squareup.okhttp3:okhttp-urlconnection" }
+okhttp-tls = { module = "com.squareup.okhttp3:okhttp-tls" }
+kotlin-std-lib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinVersion" }
+ktx-core = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
+coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutinesAndroid" }
+coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
+serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "jsonSerialization" }
+lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common", version.ref = "lifecycle" }
+security = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose"}
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidXBrowser"}
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "androidxCamera" }
