--- a/microapps/FeatureFormsApp/app/src/main/AndroidManifest.xml
+++ b/microapps/FeatureFormsApp/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.arcgismaps.toolkit.authentication.OAuthUserSignInActivity"
+            android:name="com.arcgismaps.toolkit.authentication.AuthenticationActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:launchMode="singleTop" >
