--- a/toolkit/offline/src/main/AndroidManifest.xml
+++ b/toolkit/offline/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application>
         <service
             android:name="androidx.work.impl.foreground.SystemForegroundService"
