--- a/toolkit/authentication/src/androidTest/AndroidManifest.xml
+++ b/toolkit/authentication/src/androidTest/AndroidManifest.xml
@@ -46,5 +46,11 @@
                     android:scheme="kotlin-authentication-test-2" />
             </intent-filter>
             </activity>
+        <activity android:name="com.arcgismaps.toolkit.authentication.AuthenticatorStateActivity"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
