--- a/toolkit/authentication/src/androidTest/AndroidManifest.xml
+++ b/toolkit/authentication/src/androidTest/AndroidManifest.xml
@@ -17,12 +17,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="auth"
-                    android:scheme="kotlin-authentication-test-1" />
-                <data
-                    android:host="auth"
-                    android:scheme="kotlin-iap-test-1" />
+                <data android:host="auth"/>
+                <data android:scheme="kotlin-authentication-test-1" />
+                <data android:scheme="kotlin-auth-local-test-2" />
+                <data android:scheme="kotlin-iap-test-1" />
             </intent-filter>
         </activity>
 
