--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ activityCompose = "1.10.1"
 androidGradlePlugin = "8.9.2"
 androidXBrowser = "1.8.0"
 coilBOM = "2.5.0"
+coil3 = "3.3.0"
 composeBOM = "2025.04.01"
 androidxCamera = "1.4.2"
 androidxComposeCompiler = "1.5.12"
@@ -80,6 +81,7 @@ coil-bom = { group = "io.coil-kt", name = "coil-bom", version.ref = "coilBOM" }
 coil = { group = "io.coil-kt", name = "coil" }
 coil-base = { group = "io.coil-kt", name = "coil-base" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose" }
+coil3-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
 commonmark = { group = "org.commonmark", name = "commonmark", version.ref="commonMark" }
 commonmark-strikethrough = { group = "org.commonmark", name = "commonmark-ext-gfm-strikethrough", version.ref="commonMark" }
 hilt-android-core = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
