--- a/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
+++ b/microapps/OfflineMapAreasApp/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.arcgismaps.toolkit.authentication.OAuthUserSignInActivity"
+            android:name="com.arcgismaps.toolkit.authentication.AuthenticationActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:launchMode="singleTop" >
